--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-
+  <div class="main">
+    <img src="./images/phones.png" class="phone-image" alt="">
+  </div>
 </body>
 
 </html>
