--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
 <body>
   <div class="main">
     <img src="./images/phones.png" class="phone-image" alt="">
+    <div class="others">
+      <div class="form">
+        <img src="./images/logo.png" alt="Instagram">
+        <input type="text" placeholder="Phone number, username or email" />
+        <input type="password" placeholder="Password" />
+        <button>Log In</button>
+      </div>
+      <div class="signup"></div>
+      <div class="remaings">
+
+      </div>
+    </div>
   </div>
 </body>
 
