--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <input type="text" placeholder="Phone number, username or email" />
         <input type="password" placeholder="Password" />
         <button>Log In</button>
+        <a href="">Forgotten your password?</a>
       </div>
       <div class="signup"></div>
       <div class="remaings">
