--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <button>Log In</button>
         <a href="">Forgotten your password?</a>
       </div>
-      <div class="signup"></div>
+      <div class="signup">
+        <a href="">Don't have an account? <span>Sign up</span></a>
+      </div>
       <div class="remaings">
 
       </div>
